# ResNet50_libtorch

./: CMakeLists.txt  FasterRCNN.py  README.md  test.cpp
nms/: CMakeLists.txt  nms_cuda.cu  nms_cuda.cuh
roialign/: CMakeLists.txt  roi_align.cu  roi_align.cuh
